--- a/index.html
+++ b/index.html
@@ -152,8 +152,7 @@
     <footer class="lastpart footerbg">
             <h3>
                 <a href="./index.html"class="link-logo">
-                    <span class="web-logo"></span>WEB</span>
-                    <span class="studio-logo2">STUDIO</span>
+                    <span class="web-logo"></span>WEB</span><span class="studio-logo2">STUDIO</span>
                 </a>
             </h3>
             <p class="lastword">
