--- a/portfolio.html
+++ b/portfolio.html
@@ -164,8 +164,7 @@
     <footer class="lastpart footerbg container">
         <h3>
             <a href="./portfolio.html" class="link-logo">
-                <span class="web-logo"></span>WEB</span>
-                <span class="studio-logo2">STUDIO</span>
+                <span class="web-logo"></span>WEB</span><span class="studio-logo2">STUDIO</span>
             </a>
         </h3>
         <p class="lastword">
