--- a/portfolio.html
+++ b/portfolio.html
@@ -10,15 +10,15 @@
 </head>
 
 <body>
-    <!--header part-->
+    <!--2nd Header page-->
     <header>
         <nav>
             <a href="./portfolio.html" class="link-logo">
-                <span class="web-logo">WEB</span><span class="Studio-logo">STUDIO</span>
+                <span class="web-l">WEB</span><span class="Studio-l">STUDIO</span>
             </a>
             <ul class="navbar lists">
                 <li>
-                    <a href="#" class="pages">Studio</a>
+                    <a href="index.html" class="pages">Studio</a>
                 </li>
                 <li>
                     <a href="#" class="pages">Portfolio</a>
@@ -37,131 +37,105 @@
             </li>
         </ul>
     </header>
+    <!--Button part-->
+    <button type="button" class="btn primary2">All</button>
+    <button type="button" class="btn website">Web Site</button>
+    <button type="button" class="btn app">App</button>
+    <button type="button" class="btn design">Design</button>
+    <button type="button" class="btn marketing">Marketing</button>
+    </div>
 
-    <!--this is the main section-->
+    <!--Project Section-->
     <main>
-        <!--Section one-->
-        <section class="section1 bg-section1">
-            <h1 class="h1-title">
-                Effective Solution for<br>You Business
-            </h1>
-            <div class="button-container-div">
-                <button type="button" class="btn primary">Order Service</button>
-            </div>
-        </section>
-        <!--Section two-->
-        <section class="list-section">
-            <div>
-                <ul class="criteria lists">
-                    <li>
-                        <h3 class="titlelist">
-                            Strategy
-                        </h3>
-                        <p class="desclist">
-                            ur goal is to identify the business<br>problem to walk away with the<br>perfect perfect and
-                            creative
-                            solution.
-                        </p>
-                    </li>
-                    <li>
-                        <h3 class="titlelist">
-                            Punctuality
-                        </h3>
-                        <p class="desclist">
-                            Bring the key message to the<br>brand's audience for the best price<br>within the shortest
-                            possible
-                            time.
-                        </p>
-                    </li>
-                    <li>
-                        <h3 class="titlelist">
-                            Diligence
-                        </h3>
-                        <p class="desclist">
-                            Research and confirm brands that<br>present the strongest digital growth<br>opportunities
-                            and
-                            minimize
-                            risk.
-                        </p>
-                    </li>
-                    <li>
-                        <h3>
-                            Technologies
-                        </h3>
-                        <p>
-                            Design practice focused on digital<br>experiences. We bring forth a deep<br>passion for
-                            problem-solving.
-                        </p>
-                    </li>
-                </ul>
-            </div>    
-        </section>
-        <!--Section three-->
-        <section class="section3">
-            <div>
-                <h2 class="sectiontitle">
-                    What Are We Doing
-                </h2>
-                <ul class="services lists">
-                    <li>
-                        <img src="./images/img-1.jpg" alt="monitor" width="370" height="294">
-                    </li>
-                    <li>
-                        <img src="./images/img-2.jpg" alt="mobile" width="370" height="294">
-                    </li>
-                    <li>
-                        <img src="./images/img-3.jpg" alt="mobile2" width="370" height="294">
-                    </li>
-                </ul>
-            </div>
-        </section>
-        <!--Section four-->
-        <section class="section4">
-            <h2 class="sectiontitle">
-                Our Team
-            </h2>
-            <ul class="team lists">
+        <section class="project-section">
+
+            <ul class="project lists">
                 <li>
-                    <img src="./images/mark.jpg" alt="Mark Guerrero">
-                    <h3 class="teamname">
-                        Mark Guerrero
+                    <img src="./images/img-4.jpg" alt="Bank App Interface concept" width="370" height="294">
+                    <h3 class="project-name">
+                        Bank App Interface concept
                     </h3>
-                    <p class="position">
-                        Product Designer
+                    <p class="project-category">
+                        App
                     </p>
                 </li>
                 <li>
-                    <img src="./images/tom.jpg" alt="Tom Ford">
-                    <h3 class="teamname">
-                        Tom Ford
+                    <img src="./images/img-5.jpg" alt="Cashless Payment" width="370" height="294">
+                    <h3 class="project-name">
+                        Cashless Payment
                     </h3>
-                    <p class="position">
-                        Frontend Developer
+                    <p class="project-category">
+                        Marketing
                     </p>
                 </li>
                 <li>
-                    <img src="./images/camila.jpg" alt="Camila Garcia">
-                    <h3 class="teamname">
-                        Camila Garcia
+                    <img src="./images/img-6.jpg" alt="Meditation App" width="370" height="294">
+                    <h3 class="project-name">
+                        Meditation App
+                    </h3>
+                    <p class="project-category">
+                        App
+                    </p>
+                </li>
+                <li>
+                    <img src="./images/img-7.jpg" alt="Taxi Service" width="370" height="294">
+                    <h3 class="project-name">
+                        Taxi Service
                     </h3>
                     <p class="position">
                         Marketing
                     </p>
                 </li>
                 <li>
-                    <img src="./images/daniel.jpg" alt="Daniel Wilson">
-                    <h3 class="teamname">
-                        Daniel Wilson
+                    <img src="./images/img-8.jpg" alt="Screen Illustrations" width="370" height="294">
+                    <h3 class="project-name">
+                        Screen Illustrations
                     </h3>
                     <p class="position">
-                        UI Designer
+                        Design
+                    </p>
+                </li>
+                <li>
+                    <img src="./images/img-9.jpg" alt="Online Courses" width="370" height="294">
+                    <h3 class="project-name">
+                        Online Courses
+                    </h3>
+                    <p class="position">
+                        Marketing
+                    </p>
+                </li>
+                <li>
+                    <img src="./images/img-10.jpg" alt="Instagram Story Concept" width="370" height="294">
+                    <h3 class="project-name">
+                        Instagram Story Concept
+                    </h3>
+                    <p class="position">
+                        Design
+                    </p>
+                </li>
+                <li>
+                    <img src="./images/img-11.jpg" alt="Organic Food" width="370" height="294">
+                    <h3 class="project-name">
+                        Organic Food
+                    </h3>
+                    <p class="position">
+                        Web Site
+                    </p>
+                </li>
+                <li>
+                    <img src="./images/img-12.jpg" alt="Fresh Coffee" width="370" height="294">
+                    <h3 class="project-name">
+                        Fresh Coffee
+                    </h3>
+                    <p class="position">
+                        Web Site
                     </p>
                 </li>
             </ul>
         </section>
     </main>
     <!--This is  the footer-->
-    <footer class="lastpart footerbg container">
+    <footer class="lastpart footerbg">
         <h3>
             <a href="./portfolio.html" class="link-logo">
                 <span class="web-logo"></span>WEB</span><span class="studio-logo2">STUDIO</span>
