--- a/index.html
+++ b/index.html
@@ -1,43 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Homework 2</title>
-    <link rel="stylesheet" href="./style.css"></link>
+    <link rel="stylesheet" href="./css/style.css">
+    </link>
 </head>
+
 <body>
     <!--header part-->
     <header>
-        <h3>
-            <a href="./index.html" class="link-logo">
-                <span class="web-logo">WEB</span>
-                <span class="Studio-logo">STUDIO</span>
-
+        <nav>
+            <a href="./portfolio.html" class="link-logo">
+                <span class="web-l">WEB</span><span class="Studio-l">STUDIO</span>
             </a>
-        </h3>
-                <nav>
-
-                    <ul class="navbar lists">
-                        <li>
-                            <a href="#" class="pages currentoption">Studio</a>
-                        </li>
-                        <li>
-                            <a href="#" class="pages">Portfolio</a>
-                        </li>
-                        <li>
-                            <a href="#" class="pages">Contacts</a>
-                        </li>
-                    </ul>
-                </nav>    
-                    <ul class="contact-info lists">
-                        <li>
-                            <a href="mailto:Info@devstudio.com" class="info">Info@devstudio.com</a>
-                        </li>
-                        <li>
-                            <a href="tel:+000 1111111" class="info">+11 (000) 111-11-11</a>
-                        </li>
-                    </ul>
+            <ul class="navbar lists">
+                <li>
+                    <a href="#" class="pages">Studio</a>
+                </li>
+                <li>
+                    <a href="./portfolio.html" class="pages">Portfolio</a>
+                </li>
+                <li>
+                    <a href="#" class="pages">Contacts</a>
+                </li>
+            </ul>
+        </nav>
+        <ul class="contact-info lists">
+            <li>
+                <a href="mailto:info@devstudio.com" class="info">info@devstudio.com</a>
+            </li>
+            <li>
+                <a href="tel:+110001111111" class="info">+11 (000) 111-11-11</a>
+            </li>
+        </ul>
     </header>
 
     <!--this is the main section-->
@@ -45,119 +43,135 @@
         <!--Section one-->
         <section class="section1 bg-section1">
             <h1 class="h1-title">
-                Effective Solution for You Business
+                Effective Solution for<br>You Business
             </h1>
-            <button type="Button" class="btn primary">Order Service</button>
+            <div class="button-container-div">
+                <button type="button" class="btn primary">Order Service</button>
+            </div>
         </section>
         <!--Section two-->
         <section class="list-section">
-            <ul class="criteria lists">
-                <li>
-                    <h3 class="titlelist">
-                        Strategy
-                    </h3>
-                    <p class="desclist">
-                        Our goal is to identify the business problem to walk away with the perfect perfect and creative solution.
-                    </p>
-                </li>
-                <li>
-                    <h3 class="titlelist">
-                        Punctuality
-                    </h3>
-                    <p class="desclist">
-                        Bring the key message to the brand's audience for the best price within the shortest possible time.
-                    </p>
-                </li>
-                <li>
-                    <h3 class="titlelist">
-                        Diligence
-                    </h3>
-                    <p class="desclist">
-                        Research and confirm brands that present the strongest digital growth opportunities and minimize risk.
-                    </p>
-                </li>
-                <li>
-                    <h3>
-                        Technologies
-                    </h3>
-                    <p>
-                        Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.
-                    </p>
-                </li>
-            </ul>
-        </section>
-    <!--Section three-->
-        <section class="section3">
-            <h2 class="sectiontitle">
-                What Are We Doing
-            </h2>
-                <ul class="services lists">
+            <div>
+                <ul class="criteria lists">
                     <li>
-                        <img src="./images/img 1.jpg" alt="monitor" width="500px">
+                        <h3 class="titlelist">
+                            Strategy
+                        </h3>
+                        <p class="desclist">
+                            ur goal is to identify the business<br>problem to walk away with the<br>perfect perfect and
+                            creative
+                            solution.
+                        </p>
                     </li>
                     <li>
-                        <img src="./images/img 2.jpg" alt="mobile" width="500px">
+                        <h3 class="titlelist">
+                            Punctuality
+                        </h3>
+                        <p class="desclist">
+                            Bring the key message to the<br>brand's audience for the best price<br>within the shortest
+                            possible
+                            time.
+                        </p>
                     </li>
                     <li>
-                        <img src="./images/img 3.jpg" alt="mobile2" width="500px">
+                        <h3 class="titlelist">
+                            Diligence
+                        </h3>
+                        <p class="desclist">
+                            Research and confirm brands that<br>present the strongest digital growth<br>opportunities
+                            and
+                            minimize
+                            risk.
+                        </p>
+                    </li>
+                    <li>
+                        <h3>
+                            Technologies
+                        </h3>
+                        <p>
+                            Design practice focused on digital<br>experiences. We bring forth a deep<br>passion for
+                            problem-solving.
+                        </p>
                     </li>
                 </ul>
+            </div>    
+        </section>
+        <!--Section three-->
+        <section class="section3">
+            <div>
+                <h2 class="sectiontitle">
+                    What Are We Doing
+                </h2>
+                <ul class="services lists">
+                    <li>
+                        <img src="./images/img-1.jpg" alt="monitor" width="370" height="294">
+                    </li>
+                    <li>
+                        <img src="./images/img-2.jpg" alt="mobile" width="370" height="294">
+                    </li>
+                    <li>
+                        <img src="./images/img-3.jpg" alt="mobile2" width="370" height="294">
+                    </li>
+                </ul>
+            </div>
         </section>
         <!--Section four-->
         <section class="section4">
             <h2 class="sectiontitle">
                 Our Team
             </h2>
-                <ul class="team lists">
-                    <li>
-                        <img src="./images/Mark.jpg" alt="Mark Guerrero">
-                            <h3 class="teamname">
-                                Mark Guerrero
-                            </h3>
-                            <p class="position">
-                                Product Designer
-                            </p>
-                    </li>
-                    <li>
-                        <img src="./images/Tom.jpg" alt="Tom Ford">
-                        <h3 class="teamname">
-                            Tom Ford
-                        </h3>
-                        <p class="position">
-                            Frontend Developer
-                        </p>
-                    </li>
-                    <li>
-                        <img src="./images/Camila.jpg" alt="Camila Garcia">
-                        <h3 class="teamname">
-                            Camila Garcia
-                        </h3>
-                        <p class="position">
-                            Marketing
-                        </p>
-                    </li>
-                    <li>
-                        <img src="./images/Daniel.jpg" alt="Daniel Wilson">
-                        <h3 class="teamname">
-                            Daniel Wilson
-                        </h3>
-                        <p class="position">
-                            UI Designer
-                        </p>
-                    </li>
-                </ul>
+            <ul class="team lists">
+                <li>
+                    <img src="./images/mark.jpg" alt="Mark Guerrero">
+                    <h3 class="teamname">
+                        Mark Guerrero
+                    </h3>
+                    <p class="position">
+                        Product Designer
+                    </p>
+                </li>
+                <li>
+                    <img src="./images/tom.jpg" alt="Tom Ford">
+                    <h3 class="teamname">
+                        Tom Ford
+                    </h3>
+                    <p class="position">
+                        Frontend Developer
+                    </p>
+                </li>
+                <li>
+                    <img src="./images/camila.jpg" alt="Camila Garcia">
+                    <h3 class="teamname">
+                        Camila Garcia
+                    </h3>
+                    <p class="position">
+                        Marketing
+                    </p>
+                </li>
+                <li>
+                    <img src="./images/daniel.jpg" alt="Daniel Wilson">
+                    <h3 class="teamname">
+                        Daniel Wilson
+                    </h3>
+                    <p class="position">
+                        UI Designer
+                    </p>
+                </li>
+            </ul>
         </section>
     </main>
     <!--This is  the footer-->
     <footer class="lastpart footerbg">
-            <h3>
-                <a href="./index.html"class="link-logo">
-                    <span class="web-logo"></span>WEB</span><span class="studio-logo2">STUDIO</span>
-                </a>
-            </h3>
-            <p class="lastword">
-                Increase the flow of customers and sales <br> for your business with digital <br> marketing & growth solutions.
-            </p>
+        <h3>
+            <a href="./portfolio.html" class="link-logo">
+                <span class="web-logo"></span>WEB</span><span class="studio-logo2">STUDIO</span>
+            </a>
+        </h3>
+        <p class="lastword">
+            Increase the flow of customers and sales <br> for your business with digital <br> marketing & growth
+            solutions.
+        </p>
     </footer>
 </body>
+
 </html>
