--- a/portfolio.html
+++ b/portfolio.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Homework 2</title>
     <link rel="stylesheet" href="./css/style.css">
-    </link>
 </head>
 
 <body>
@@ -14,7 +13,7 @@
     <header>
         <nav>
             <a href="./portfolio.html" class="link-logo">
-                <span class="web-l">WEB</span><span class="Studio-l">STUDIO</span>
+                <span class="web-l">WEB</span><span class="studio-l">STUDIO</span>
             </a>
             <ul class="navbar lists">
                 <li>
@@ -43,12 +42,9 @@
     <button type="button" class="btn app">App</button>
     <button type="button" class="btn design">Design</button>
     <button type="button" class="btn marketing">Marketing</button>
-    </div>
-
     <!--Project Section-->
     <main>
         <section class="project-section">
-
             <ul class="project lists">
                 <li>
                     <img src="./images/img-4.jpg" alt="Bank App Interface concept" width="370" height="294">
@@ -138,7 +134,7 @@
     <footer class="lastpart footerbg">
         <h3>
             <a href="./portfolio.html" class="link-logo">
-                <span class="web-logo"></span>WEB</span><span class="studio-logo2">STUDIO</span>
+                <span class="web-logo">WEB</span><span class="studio-logo2">STUDIO</span>
             </a>
         </h3>
         <p class="lastword">
