--- a/portfolio.html
+++ b/portfolio.html
@@ -53,7 +53,7 @@
                     <li>
                         <a href="" class="project">
                         <img src="./images/img-4.jpg" alt="bank app interface concept" width="370" height="294">
-                        <h3 class="project name">
+                        <h3 class="name">
                             Bank App Interface concept
                         </h3>
                         <p class="type">
@@ -64,7 +64,7 @@
                     <li>
                         <a href="" class="project">
                         <img src="./images/img-5.jpg" alt="cashless payment" width="370" height="294">
-                        <h3 class="project name">
+                        <h3 class="name">
                             Cashless Payment
                         </h3>
                         <p class="type">
@@ -75,7 +75,7 @@
                     <li>
                         <a href="" class="project">
                         <img src="./images/img-6.jpg" alt="meditation app" width="370" height="294">
-                        <h3 class="project name">
+                        <h3 class="name">
                             Meditation App
                         </h3>
                         <p class="type">
@@ -86,7 +86,7 @@
                     <li>
                         <a href="" class="project">
                         <img src="./images/img-7.jpg" alt="taxi service" width="370" height="294">
-                        <h3 class="project name">
+                        <h3 class="name">
                             Taxi Service
                         </h3>
                         <p class="type">
@@ -108,7 +108,7 @@
                     <li>
                         <a href="" class="project">
                         <img src="./images/img-9.jpg" alt="online courses" width="370" height="294">
-                        <h3 class="project name">
+                        <h3 class="name">
                             Online Courses
                         </h3>
                         <p class="type">
@@ -119,7 +119,7 @@
                     <li>
                         <a href="" class="project">
                         <img src="./images/img-10.jpg" alt="instagram story concept" width="370" height="294">
-                        <h3 class="project name">
+                        <h3 class="name">
                             Instagram Story Concept
                         </h3>
                         <p class="type">
