--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <main>
         <!--Section one-->
         <section class="hero bg-hero">
-            <h1 class="hero-title">Effective Solution for<br>You Business</h1>
+            <h1 class="hero-title">Effective Solution for<br>Your Business</h1>
             <button type="button" class="button primary">Order Service</button>
 
         </section>
@@ -56,7 +56,7 @@
                     <li>
                         <h3 class="title">Strategy</h3>
                         <p class="description">
-                            ur goal is to identify the business<br>problem to walk away with the<br>perfect perfect and
+                            Our goal is to identify the business<br>problem to walk away with the<br>perfect perfect and
                             creative
                             solution.
                         </p>
