--- a/portfolio.html
+++ b/portfolio.html
@@ -21,10 +21,10 @@
             </a>
             <ul class="nav-menu list">
                 <li>
-                    <a href="./index.html" class="page current">Studio</a>
+                    <a href="./index.html" class="page">Studio</a>
                 </li>
                 <li>
-                    <a href="./portfolio.html" class="page">Portfolio</a>
+                    <a href="./portfolio.html" class="page current">Portfolio</a>
                 </li>
                 <li>
                     <a href="#" class="page">Contacts</a>
